Fix style bugs on mobile view for club table

--- a/src/leaderboard/components/LeaderboardItem.css
+++ b/src/leaderboard/components/LeaderboardItem.css
@@ -1,3 +1,5 @@
+@value medium from "../../styles/breakpoints.css";
+
 .root {
 	padding: 24px;
 	border-bottom: 1px solid #efefef;
@@ -16,6 +18,20 @@
 .details {
 	flex: 1;
 	display: flex;
+	flex-direction: column;
 	justify-content: space-between;
 	flex-wrap: wrap;
+
+	@media medium {
+		flex-direction: row;
+	}
+}
+
+.name, .time, .date {
+	display: flex;
+
+	@media medium {
+		justify-content: center;
+		width: 33%;
+	}
 }
